--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
     "mysql2": "^3.6.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
