--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/express-session": "^1.17.10",
+    "@types/passport": "^1.0.15",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
