--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
+    "@nestjs/swagger": "^7.1.15",
     "@types/bcrypt": "^5.0.2",
     "@types/express-session": "^1.17.10",
     "@types/passport": "^1.0.15",
